# MOMF

./: .gitignore  INSTALL  MakeConfig  Makefile  Makefile.irix  ManMOMF.ps  ManMOMF.tex  README.md  diffest.pro  makefile.defs  momfnotes.ps  momfnotes.tex  momfnotes.txt  momfnotes_extra.txt  preamble_article.tex
common/: calcsize.f  rimage.old.f  rimage4.f  rimage4.f~
fits/: fitsinput.f  test.f
fitsio/: Makef90  Makefile  Makefile.in  README  cfitsio.doc  cfitsio.h  cfortran.doc  cfortran.h  changes.doc  config.cache  config.status  configure  configure.in  cookbook.f  cookbook.ps  cookbook.tex  cookbook.toc  fitsalphavms.f  fitscray.f  fitsdec.f  fitsf90.f  fitsfort.f  fitsio.doc  fitsio.f  fitsio.ps  fitsio.tex  fitsio.toc  fitsiospp.h  fitslinx.f  fitsmac.f  fitsmacls.f  fitsnxab.f  fitsspp.com  fitsspp.x  fitssppb.x  fitssppvms.x  fitssun.f  fitsvax.f  fsplit.c  makevms.com  (+11 more)
m01/: MOMF.find  momf.COOR  momf.LARGE  momf.SCOO  momf.SUM  momf01  momf01.nosum  set1
m01/fortran/: Dchange.f  Dcoor.f  Dcoor2.f  Dnew.f  Drename3.f  Dshow.f  Dshow2.f  Dsort.f  Dspot2.f  Dsum.f  MOMFfind.f  MOMFname.f  MOMFname2.f  Makefile  SLP.f  gradfind.f  gradfind.old.f  gradfind.org  rimage_new.f  tblock.f
m01/inputdata/: FORMAT
m02/: imtest02  imtest02~  momf02
m02/fortran/: Makefile  diff.file  imtest.f  imtest.f~  maggen.f  maggen.f.SAT99.OFFSET  rimage.old.f
m02/inputdata/: APrad  FORMAT  PSFparam  SKYparam
m03/: momf03  momf04
m03/fortran/: MAGmean.f  MAGmean.save  MAGname.f  MAGnew.f  MAGrelativ.f  MAGrelativ.save  MAGsort.f  MAGsort2.f  MAGvariab.f  Makefile  scattername.f
stdfil/: APrad  FORMAT  MOMF.ref  MOMF01  MOMF01.nosum  MOMF02  MOMF03  PSFparam  SKYparam  find.param  input.MOMF  input.SUM
